add today values to DOM

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,9 @@
     <h2 id="physical-activity-header">Physical Activity</h2>
     <section id="physical-activity">
       <article class="physical-activity-card" id="steps-card">
-
+        <p class="todays-steps" id="todays-steps">Today's Steps: </p>
+        <p class="mins-active" id="mins-active">Today's Minutes of Activity: </p>
+        <p class="miles-walked" id="miles-walked">Miles Walked Today: </p>
       </article>
       <article class="physical-activity-card" id="minutes-card">
 
@@ -90,6 +92,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="./moment.js"></script>
   <script type="text/javascript" src="../data/sleep.js"></script>
+  <script type="text/javascript" src="../data/activity.js"></script>
   <script type="text/javascript" src="../data/hydration.js"></script>
   <script type="text/javascript" src="../data/users.js"></script>
   <script type="text/javascript" src="./SleepRepo.js"></script>
