--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
         <p id="ounces-drank"></p>
       </article>
       <article class="hydration-card" id="ounces-weekly-card">
-        <h3>Weekly Hydration Data</h3>
+        <h3>Weekly Hydration Data:</h3>
         <table id="weekly-hydration-data" aria-label="weekly-hydration-data">
           <thead>
             <th>Date</th>
