--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,8 @@
   <main>
     <h2 id="physical-activity-header">Physical Activity</h2>
     <section id="physical-activity">
-      <article class="physical-activity-card" id="steps-card">
+      <article class="physical-activity-card" id="todays-physical-card">
+        <h3>Todays Physical Data</h3> 
         <p class="todays-steps" id="todays-steps">Today's Steps: </p>
         <p class="mins-active" id="mins-active">Today's Minutes of Activity: </p>
         <p class="miles-walked" id="miles-walked">Miles Walked Today: </p>
@@ -39,10 +40,14 @@
       <article class="physical-activity-card" id="stairs-card">
 
       </article>
+      <article class="physical-activity-card" id="steps-card">
+
+      </article>
     </section>
     <h2>Sleep</h3>
     <section id="sleep">
       <article class="sleep-card" id="hours-slept-card">
+        <h3>Todays Sleep Data</h3>
         <p class="todays-hours-slept" id="todays-hours-slept">Hours Slept Today:</p>
         <p class="avg-hours-slept" id="avg-hours-slept">Average Hours Slept Per Day:</p>
       </article>
