--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,16 @@
   <title>Activity Tracker</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <nav >
-    <h1 id="main-title">ActivityTracker</h1>
+    <h1 id="main-title" tabindex="1" aria-label="Activity Tracker">ActivityTracker</h1>
   </nav>
   <header>
     <section id="user-data">
-      <h2><span class="user-name-span">User</span>'s Info</h2>
+      <h2 tabindex="2"><span class="user-name-span">User</span>'s Info</h2>
+      <div class="toggle-button"></div>
       <article class="user-data-card" id="user-identity">
         <h3>General User Info</h3>
         <p id="user-email" aria-label="user-email">Email:</p>
@@ -27,7 +29,8 @@
   </header>
   <main>
     <section id="physical-activity">
-      <h2 id="physical-activity-header">Physical Activity</h2>
+      <h2 id="physical-activity-header" tabindex="3" aria-label="Physical actvity section">Physical Activity</h2>
+      <div class="toggle-button"></div>
       <article class="physical-activity-card" id="todays-physical-card">
         <h3>Todays Physical Data</h3> 
         <p class="todays-steps" id="todays-steps">Today's Steps: </p>
@@ -50,7 +53,8 @@
       </article>
     </section>
     <section id="sleep">
-      <h2 id="sleep-title">Sleep</h2>
+      <h2 id="sleep-title" tabindex="4" aria-label="Sleep section">Sleep</h2>
+      <div class="toggle-button"></div>
       <article class="sleep-card" id="hours-slept-card">
         <h3>Todays Sleep Data</h3>
         <p class="todays-hours-slept" id="todays-hours-slept">Hours Slept Today:</p>
@@ -82,7 +86,8 @@
       </article>
     </section>
     <section id="hydration">
-      <h2>Hydration</h3>
+      <h2 tabindex="5" aria-label="Hydration section">Hydration</h2>
+        <div class="toggle-button"></div>
       <article class="hydration-card" id="ounces-card">
         <h3 id="ounces-drank-today" aria-label="ounces-drank-today">Ounces drank today:</h3>
         <p id="ounces-drank"></p>
